# nexus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  index.html  test_struct_pass.s  test_struct_pass2.s
.github/: CODEOWNERS
.github/workflows/: rust.yml
docs/: index.html
nexus-async-fix-engine/: Cargo.toml
nexus-async-fix-engine/src/: lib.rs
nexus-async-fix-engine/tests/: async_conformance.rs
nexus-async-net/: CHANGELOG.md  Cargo.toml
nexus-async-net/benches/: perf_async_ws.rs
nexus-async-net/src/: lib.rs
nexus-async-net/tests/: maybe_tls_nexus_backpressure.rs  ws_nexus_tls_loopback.rs
nexus-async-rt/: CHANGELOG.md  Cargo.toml
nexus-async-rt/src/: cross_wake.rs  task.rs
nexus-channel/: Cargo.toml
nexus-collections/: CHANGELOG.md  Cargo.toml
nexus-collections/benches/: perf_batched.rs  perf_btree.rs  perf_codegen.rs  perf_heap_cycles.rs  perf_list_cycles.rs  perf_push_hist.rs  perf_push_stat.rs  perf_rbtree.rs
nexus-collections/src/: lib.rs
nexus-collections/tests/: btree_test.rs  compare_test.rs  cursor_test.rs  heap_test.rs  list_test.rs  miri_tests.rs  rbtree_test.rs
nexus-decimal/: CHANGELOG.md  Cargo.toml
nexus-decimal/src/: arithmetic.rs  constants.rs  financial.rs
nexus-decimal/tests/: financial.rs
nexus-fix-codec/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  PERF_CATALOG.md
nexus-fix-codec/benches/: parse_types.rs  perf_parse_cycles.rs
nexus-fix-codec/examples/: perf_scan.rs
nexus-fix-codec/src/: dict.rs  error.rs  field.rs  header.rs  lib.rs  reader.rs  types.rs  writer.rs
nexus-fix-codec/tests/: property.rs
nexus-fix-codegen/: Cargo.toml  README.md
nexus-fix-codegen-tests/: Cargo.toml  build.rs
nexus-fix-codegen-tests/benches/: perf_decode_cycles.rs
nexus-fix-codegen-tests/src/: lib.rs
nexus-fix-codegen-tests/tests/: roundtrip.rs
nexus-fix-codegen/src/: tests.rs
nexus-fix-engine/: Cargo.toml  README.md
nexus-fix-engine/examples/: blocking_session.rs
nexus-fix-engine/src/: frame.rs  framework.rs  lib.rs  persist.rs  store.rs  timestamp.rs  transport.rs
nexus-fix-engine/tests/: fix_conformance.rs  framework.rs  session.rs  transport.rs
nexus-fix-harness/: Cargo.toml
nexus-fix-harness/src/: main.rs
nexus-inference/: CHANGELOG.md  Cargo.toml  PERF_CATALOG.md  README.md
nexus-inference/benches/: predict_bench.rs
nexus-inference/docs/: INDEX.md
nexus-inference/src/: bnn.rs  (+3 more)
nexus-journal/: BENCHMARKS.md  Cargo.toml  README.md
nexus-net/: CHANGELOG.md  Cargo.toml
nexus-platform/: Cargo.toml  README.md
nexus-queue/: Cargo.toml
nexus-rt/: CHANGELOG.md  Cargo.toml  README.md
nexus-shm/: Cargo.toml  README.md
nexus-stats/: CHANGELOG.md  Cargo.toml
nexus-stats-control/: CHANGELOG.md  Cargo.toml
nexus-stats-core/: CHANGELOG.md
nexus-stats-detection/: CHANGELOG.md  Cargo.toml
nexus-stats-regression/: CHANGELOG.md  Cargo.toml
nexus-stats-smoothing/: CHANGELOG.md  Cargo.toml  README.md
nexus-timer/: Cargo.toml
nexus-web/: CHANGELOG.md
tools/: loom.sh  miri.sh
(+240 files in other folders)
